--- a/src/main/resources/templates/daibanliebiao.html
+++ b/src/main/resources/templates/daibanliebiao.html
@@ -36,7 +36,7 @@
 <body>
 
 <div class="x_content">
-
+    <div class="form-group"></div><div class="form-group"></div>
     <form th:action="@{/waitList}" method="post" id="frm" name="frm" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
         <input type="hidden" name="pageIndex" id="pageIndex" value="1"/>
         <ul>
@@ -145,7 +145,14 @@
 
         <div class="col-sm-5">
             <div class="dataTables_info" id="datatable_info" role="status"
-                 aria-live="polite">当前页<span th:text="${pageSurport.pageIndex}"></span> /<span th:text="${pageSurport.totalPageCount }"></span>页 </div>
+                 aria-live="polite">当前页<span th:text="${pageSurport.pageIndex}"></span> /
+                <span th:if="${pageSurport.totalPageCount }!=0">
+                    <span th:text="${pageSurport.totalPageCount }"></span>页
+                </span>
+                <span th:if="${pageSurport.totalPageCount }==0">
+                    1页
+                </span>
+                </div>
         </div>
 
         <div class="col-sm-7">
