--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -65,7 +65,11 @@
 			background-color: ghostwhite;position: relative; z-index: 999;
 			border: 1px solid blue;
 		}
-
+		#titles{
+			width:120px;margin:0 auto;float:right;
+			background-color: ghostwhite;position: relative; z-index: 999;
+			border: 1px solid blue;
+		}
 
 	</style>
 </head>
@@ -109,7 +113,7 @@
 			</li>
 
 			<li class="lefttop">
-				<div class="col-md-6 col-sm-6 col-xs-12">
+				<div class="col-md-8col-sm-8 col-xs-12">
 					<input type="file" id="photo" name="photos" value="" required="required" class="form-control col-md-7 col-xs-12">
 				</div>
 			</li>
@@ -138,6 +142,36 @@
 						<input type="text" id="posCode" name="posCode" value=""
 							   readonly  required="required" class="form-control col-md-7 col-xs-12">
 						<span id="poscodes"></span>
+					</div>
+				</div>
+			</li>
+
+			<li class="lefttop"></li>
+			<li class="lefttop">
+				<div class="form-group">
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">职称名称:</label>
+					<div class="col-md-6 col-sm-6 col-xs-12">
+						<input readonly="readonly" id="titleName" type="text" name="titleName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+						<input type="hidden" id="titleId" name="titleId">
+						<span id="tiltenames"></span>
+					</div><i id="mytitle"  class="fa fa-search-plus"></i>
+					<div id="titles">
+						<ul>
+							<li th:each="title:${titleList}">
+								<span th:text="${title.titleName}"  th:id="${title.id}"></span>
+							</li>
+						</ul>
+					</div >
+				</div>
+			</li>
+			<li class="lefttop">
+				<div class="form-group">
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">职称编码:</label>
+					<div class="col-md-6 col-sm-6 col-xs-12">
+
+						<input type="text" id="titleCode" name="titleCode" value=""
+							   readonly  required="required" class="form-control col-md-7 col-xs-12">
+						<span id="titlecodes"></span>
 					</div>
 				</div>
 			</li>
@@ -384,17 +418,7 @@
 
 	</form>
 </div>
-<script>
-	$(document).ready(function () {
-		/*var name=$("#name").val();
-		var names=$("#names").val();
-		if(name==null){
-			alert(name);
-		}*/
 
-	})
-
-</script>
 
 
 
@@ -421,14 +445,7 @@
 <script th:src="@{/js/jquery.js}"></script>
 <script type="text/javascript">
 	$(document).ready(function () {
-		/*$("#name").blur(function () {
-            var name=$("#name").val();
-            if(name==""){
-                alert("姓名不能为空");
-                return false;
-            }
-            return true;
-        })*/
+
 		//获取所属部门
 		$("#yincang span").click(function () {
 			var id=$(this).attr("id");
@@ -461,7 +478,19 @@
 				$(this).html("");
 			}
 		});
-		$("#psn").hide();
+		$("#mytitle").click(function () {
+			var o=$("#titles");
+			if(o.css("display")!="none"){
+				o.hide();
+				$(this).html("");
+			}else {
+				o.show();
+				$(this).html("");
+			}
+		});
+
+		});
+	$("#psn").hide();
 		$("#psn span").click(function(){
 			var id=$(this).attr("id");
 			var posName=$(this).text();
@@ -474,7 +503,20 @@
 					$("#posCode").val(data);
 				})
 			}
-		});
+
+		})
+	$("#titles").hide();
+	$("#titles span").click(function(){
+		var id=$(this).attr("id");
+		var titleName=$(this).text();
+		$("#titleId").val(id);
+		$("#titleName").val(titleName);
+		if(titleName!=null && titleName!=""){
+			$("#titles").hide();
+			$.get("findTitleCode",{"id":id},function (data) {
+				$("#titleCode").val(data);
+			})
+		}
 
 	})
 </script>
