--- a/src/main/resources/templates/renshidanganmixi.html
+++ b/src/main/resources/templates/renshidanganmixi.html
@@ -99,7 +99,7 @@
 					</li>
 					<li class="lefttop">
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="posCode">职位编码:</label>
+							<label class="control-label col-md-4 col-sm-4 col-xs-12" for="posCode">职位编码:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="posCode" th:value="${archive.posCode}" name="posCode" required="required" class="form-control col-md-7 col-xs-12">
 							</div>
@@ -107,6 +107,31 @@
 					</li>
 					<li class="lefttop">
 						
+					</li>
+					<li class="lefttop">
+						<div class="form-group">
+							<label class="control-label col-md-4 col-sm-4 col-xs-12">职称名称:</label>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+								<input readonly="readonly" th:value="${archive.titleIds}" id="titleName" type="text" name="titleName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+								<input type="hidden" id="titleId" name="titleId">
+								<span id="tiltenames"></span>
+							</div>
+
+						</div>
+					</li>
+					<li class="lefttop">
+						<div class="form-group">
+							<label class="control-label col-md-4 col-sm-4 col-xs-12">职称编码:</label>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+
+								<input type="text" id="titleCode" name="titleCode" th:value="${archive.titleCode}"
+									   readonly  required="required" class="form-control col-md-7 col-xs-12">
+								<span id="titlecodes"></span>
+							</div>
+						</div>
+					</li>
+					<li class="lefttop">
+
 					</li>
 					<li class="lefttop">
 						<div class="form-group">
@@ -374,12 +399,71 @@
 			}else{
 				$("#docFile").append("<p>"+annexhidden+
 						"&nbsp;&nbsp;<a href=\""+annexhidden+"?m="+Math.random()+"\" >下载</a> &nbsp;&nbsp;" +
-						"<a href=\"javascript:onclick=delDocFile('"+id+"');\">删除</a></p>");
+						"</p>");/*<a href=\"javascript:onclick=delDocFile('"+id+"');\">删除</a>*/
 			}
 
+//获取所属部门
+				$("#yincang span").click(function () {
+					var id=$(this).attr("id");
+					var depname=$(this).text();
+					$("#depId").val(id);
+					$("#depName").val(depname);
+					if(depname!=null||depname==""){
+						$("#yincang").hide();
+					}
+				});
+				//点击显示和隐藏
+				$("#yincang").hide();
+				$("#myBT").click(function () {
+					var o=$("#yincang");
+					if(o.css("display")!="none"){
+						o.hide();
+						$(this).html("");
+					}else {
+						o.show();
+						$(this).html("");
+					}
+				});
+				$("#myBTPos").click(function () {
+					var o=$("#psn");
+					if(o.css("display")!="none"){
+						o.hide();
+						$(this).html("");
+					}else {
+						o.show();
+						$(this).html("");
+					}
+				});
 
 
+			});
+			$("#psn").hide();
+			$("#psn span").click(function(){
+				var id=$(this).attr("id");
+				var posName=$(this).text();
+				$("#posId").val(id);
+				$("#posName").val(posName);
 
+				if(posName!=null && posName!=""){
+					$("#psn").hide();
+					$.get("findPosCode",{"id":id},function (data) {
+						$("#posCode").val(data);
+					})
+				}
+
+			})
+			$("#titles").hide();
+			$("#titles span").click(function(){
+				var id=$(this).attr("id");
+				var titleName=$(this).text();
+				$("#titleId").val(id);
+				$("#titleName").val(titleName);
+				if(titleName!=null && titleName!=""){
+					$("#titles").hide();
+					$.get("findTitleCode",{"id":id},function (data) {
+						$("#titleCode").val(data);
+					})
+				}
 
 
 				$('#birthday').daterangepicker({
